--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  freezed: ^2.3.2
+  freezed_annotation: ^2.2.0
+  dio: ^5.0.1
+  get_it: ^7.2.0
+  build_runner: ^2.3.3
+  json_serializable: ^6.6.1
 
 dev_dependencies:
   flutter_test:
