--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,11 @@ dependencies:
   flutter:
     sdk: flutter
 
+  window_size:
+    git:
+      url: https://github.com/google/flutter-desktop-embedding
+      path: plugins/window_size
+
   cupertino_icons: ^1.0.2
   freezed: ^2.3.2
   freezed_annotation: ^2.2.0
@@ -20,11 +25,7 @@ dependencies:
   build_runner: ^2.3.3
   json_serializable: ^6.6.1
   json_annotation: ^4.8.0
-
-  window_size:
-    git:
-      url: https://github.com/google/flutter-desktop-embedding
-      path: plugins/window_size
+  go_router: ^6.2.0
 
 
 dev_dependencies:
