--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,9 @@ dependencies:
   flutter:
     sdk: flutter
 
+  flutter_web_plugins:
+    sdk: flutter
+
   window_size:
     git:
       url: https://github.com/google/flutter-desktop-embedding
@@ -26,7 +29,6 @@ dependencies:
   json_serializable: ^6.6.1
   json_annotation: ^4.8.0
   go_router: ^6.2.0
-
 
 dev_dependencies:
   flutter_test:
